<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget33"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bule_background"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:progressDrawable="@drawable/pg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1"
        android:singleLine="true"
        android:text="@string/please_relogin"
        android:textColor="#e40080"
        android:textSize="@dimen/font_size_ld_28" />

    <TextView
        android:id="@+id/services_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dip"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1"
        android:singleLine="true"
        android:text="@string/services_name"
        android:textColor="#e40084"
        android:textSize="@dimen/font_size_ld_28" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/quick_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/home_btn_shoukuan" />

        <ImageButton
            android:id="@+id/shop_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/home_btn_xiaofei" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >
"

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_left_169px" >

                <ImageButton
                    android:id="@+id/member_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/home_btn_memberlist" />

                <ImageButton
                    android:id="@+id/member_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:src="@drawable/home_btn_recharge" />

                <ImageButton
                    android:id="@+id/charge_query"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/home_btn_inquire" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/member_list"
                    android:layout_marginLeft="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_mbmber_list"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/member_list"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_mbmber_recharge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/charge_query"
                    android:layout_marginRight="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_recharge_check"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_top_112px" >

                <ImageButton
                    android:id="@+id/person_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/home_btn_ps" />

                <ImageButton
                    android:id="@+id/custum_query"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:src="@drawable/home_btn_bill" />

                <ImageButton
                    android:id="@+id/change_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/home_btn_hexiao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person_setting"
                    android:layout_marginLeft="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_person_center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/person_setting"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_expense_check"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/person_setting"
                    android:layout_marginRight="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_card_check"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_top_112px" >

                <ImageButton
                    android:id="@+id/score_rechange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/score_rechange" />

                <ImageButton
                    android:id="@+id/steele_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:src="@drawable/re_btn_recharge" />

                <ImageButton
                    android:id="@+id/revocation_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/jiesuan_btn_recharge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/score_rechange"
                    android:layout_marginLeft="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/main_score_recharge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/steele_account"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="油卡充值"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/revocation_order"
                    android:layout_marginRight="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="话费充值"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_top_112px" >

                <ImageButton
                    android:id="@+id/quota_IB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_left_87"
                    android:background="@null"
                    android:src="@drawable/score_rechange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/quota_IB"
                    android:layout_marginLeft="@dimen/main_left_117"
                    android:layout_marginTop="@dimen/line_interval_29"
                    android:text="@string/quota_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_sa" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_edit_left_181px"
        android:scaleType="matrix" />

</LinearLayout>